--- a/step5.html
+++ b/step5.html
@@ -658,9 +658,15 @@
             	step4Case3(2);
             	step4Case3(3);
 
-                if(!isRotating){
-                    isAutoReset = false;
-                }
+                step4Case4(0);
+                step4Case4(1);
+                step4Case4(2);
+                step4Case4(3);
+
+                step4Case5(0);
+                step4Case5(1);
+                step4Case5(2);
+                step4Case5(3);
             }
             function rotate401(rotateNum,next){
                 u(rotateNum,function(){
@@ -721,9 +727,7 @@
             		var xLine11Color = getFaceColorByVector(cube11,xLine);
 
                     if(yLine11Color!=topColor&&
-                        yLine11Color!=bottomColor&&
-                        xLine11Color!=topColor&&
-                        xLine11Color!=bottomColor){
+                        xLine11Color!=topColor){
                         if(yLine11Color==getFaceColorByVector(cube4,zLine)&&
                             xLine11Color==getFaceColorByVector(cube14,xLine)&&
                             (getFaceColorByVector(cube5,zLine)!=yLine11Color||
@@ -769,6 +773,62 @@
                         })
             		}
             	}
+            }
+            //中棱归位第四种情况
+            function step4Case4(rotateNum){
+                if(!isRotating){
+                    var cube1 = getCubeByIndex(1,rotateNum);
+                    var cube3 = getCubeByIndex(3,rotateNum);
+                    var cube4 = getCubeByIndex(4,rotateNum);
+                    var cube5 = getCubeByIndex(5,rotateNum);
+                    var cube14 = getCubeByIndex(14,rotateNum);
+                    var cube11 = getCubeByIndex(11,rotateNum);
+                    var zLine = rotateAxisByYLine(ZLine,rotateNum);
+                    var xLine = rotateAxisByYLine(XLine,rotateNum);
+                    var yLine = rotateAxisByYLine(YLine,rotateNum);
+                    var zLine4Color = getFaceColorByVector(cube4,zLine);
+
+                    if(getFaceColorByVector(cube3,zLine)==zLine4Color&&getFaceColorByVector(cube5,zLine)!=zLine4Color&&getFaceColorByVector(cube5,xLine)!=getFaceColorByVector(cube14,xLine)){
+                        if(getFaceColorByVector(cube1,zLine)==zLine4Color){
+                            console.log('step4Case4-1');
+                            rotate402(rotateNum);
+                        }else if(getFaceColorByVector(cube11,yLine)==zLine4Color){
+                            console.log('step4Case4-2');
+                            rotate401(rotateNum);
+                        }else{
+                            console.log('step4Case4-3');
+                            u(rotateNum)
+                        }
+                    }
+                }
+            }
+            //中棱归位第五种情况
+            function step4Case5(rotateNum){
+                if(!isRotating){
+                    var cube5 = getCubeByIndex(5,rotateNum);
+                    var cube14 = getCubeByIndex(14,rotateNum);
+                    var cube23 = getCubeByIndex(23,rotateNum);
+                    var cube1 = getCubeByIndex(1,rotateNum);
+                    var cube11 = getCubeByIndex(11,rotateNum);
+                    var cube4 = getCubeByIndex(4,rotateNum);
+                    var xLine = rotateAxisByYLine(XLine,rotateNum);
+                    var zLine = rotateAxisByYLine(ZLine,rotateNum);
+                    var yLine = rotateAxisByYLine(YLine,rotateNum);
+                    var xLine14Color = getFaceColorByVector(cube14,xLine);
+
+                    if(xLine14Color==getFaceColorByVector(cube23,xLine)&&xLine14Color!=getFaceColorByVector(cube5,xLine)&&getFaceColorByVector(cube4,zLine)!=getFaceColorByVector(cube5,zLine)){
+                        if(getFaceColorByVector(cube1,yLine)==xLine14Color){
+                            console.log('step4Case5-1');
+                            rotate402(rotateNum);
+                        }else if(getFaceColorByVector(cube11,xLine)==xLine14Color){
+                            console.log('step4Case5-2');
+                            rotate401(rotateNum);
+                        }else{
+                            console.log('step4Case5-3');
+                            u(rotateNum)
+                        }
+                    }
+                }
             }
             //判断是否完成第四步 中棱归位
             function checkStep4(){
