--- a/step5.html
+++ b/step5.html
@@ -31,14 +31,32 @@
             	border:1px solid #d1d1d1;
             	background-color:#fff;
             }
+            p{
+                color:#ff0000;
+                margin: 5px 0 0 5px;
+            }
         </style>
     </head>
     <body onload="threeStart();">
     	<ul class="btn-list">
     		<li><button id="autoResetV1">自动还原</button></li>
     		<li><button id="randomRotate">随机旋转</button></li>
+            <li><p class="error"></p></li>
     	</ul>
         <div id="canvas-frame"></div>
+        <script>
+            /**
+             * @param {String}  errorMessage   错误信息
+             * @param {String}  scriptURI      出错的文件
+             * @param {Long}    lineNumber     出错代码的行号
+             * @param {Long}    columnNumber   出错代码的列号
+             * @param {Object}  errorObj       错误的详细信息，Anything
+             */
+            window.onerror = function(errorMessage, scriptURI, lineNumber,columnNumber,errorObj) { 
+                var $error = document.querySelector('#error');
+                $error.innerText = errorMessage;
+            }
+        </script>
         <script>
             var renderer;//渲染器
             var width;//页面宽度
